@@ -6,6 +6,7 @@
 
 #include <mysql.h>
 #include <stdio.h>
+#include <stdlib.h>
 #include "opennap.h"
 #include "debug.h"
 
