@@ -4,6 +4,8 @@
 
    $Id$ */
 
+#include <string.h>
+#include <stdlib.h>
 #include "opennap.h"
 #include "debug.h"
 
