@@ -6,6 +6,7 @@
 
 #include <string.h>
 #include <stdarg.h>
+#include <stdio.h>
 #include "opennap.h"
 #include "debug.h"
 
