@@ -4,6 +4,7 @@
 
    $Id$ */
 
+#include <stdio.h>
 #include <time.h>
 #include <string.h>
 #include <stdlib.h>
