@@ -5,6 +5,7 @@
    $Id$ */
 
 #include <mysql.h>
+#include <stdio.h>
 #include "opennap.h"
 #include "debug.h"
 
