@@ -6,6 +6,8 @@
 
 #include <unistd.h>
 #include <string.h>
+#include <stdlib.h>
+#include <stdio.h>
 #include "opennap.h"
 #include "debug.h"
 
